--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href= 
-      "https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap , 
-       https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <header>
         <nav>
             <a href="./index.html" class ="logo">
-                <span class="logo-web">Web</span>Studio</a>
+            Web<span class="logo-studio">Studio</span></a>
             <ul class="menu-nav">
-                <li class="studio"><a href="" class="link">Studio</a></li>
+                <li><a href="" class="link">Studio</a></li>
                 <li><a href="" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
@@ -31,7 +30,7 @@
     </header>
     <main>
         <section class="page-title">
-            <h1 class="header1">Effective Solutions for Your Business</h1>
+            <h1 class="header-page-title">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
 
@@ -52,7 +51,7 @@
                     <p class="groups-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3 class="head3">Technologies</h3>
+                    <h3 class="groups-title">Technologies</h3>
                     <p class="groups-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
@@ -61,7 +60,7 @@
         <section class="our-team">
             <h2 class="section-title">Our Team</h2>
             <ul class="our-team-groups">
-                <li class="mark-guerrero">
+                <li class="card-team">
                     <img 
                     src="./images/imgteamCard1.jpg"
                     width="264"
@@ -69,7 +68,7 @@
                     <h3 class="groups-title">Mark Guerrero</h3>
                     <p class="groups-text">Product Designer</p>
                 </li>
-                <li class="tom-ford">
+                <li class="card-team">
                     <img 
                     src="./images/imgteamCard2.jpg" 
                     width="264" 
@@ -77,7 +76,7 @@
                     <h3 class="groups-title">Tom Ford</h3>
                     <p class="groups-text">Frontend Developer</p>
                 </li>
-                <li class="camila-garcia">
+                <li class="card-team">
                     <img 
                     src="./images/imgteamCard3.jpg" 
                     width="264" 
@@ -85,7 +84,7 @@
                     <h3 class="groups-title">Camila Garcia</h3>
                     <p class="groups-text">Marketing</p>
                 </li>
-                <li class="daniel-wilson">
+                <li class="card-team">
                     <img 
                     src="./images/imgteamCard4.jpg" 
                     width="264" 
@@ -119,13 +118,10 @@
                     <img 
                     src="./images/imgmeditationApp.jpg" 
                     width="360" 
-                    alt="" />
+                    alt="Card Meditation App" />
                     <h3 class="groups-title">Meditation App</h3>
                     <p class="groups-text">App</p>
                 </li>
-            </ul>
-
-            <ul class="our-portfolio-groups2">
                 <li>
                     <img 
                     src="./images/imgtaxiService.jpg" 
@@ -155,7 +151,7 @@
     </main>
     <footer class="footer">
         <a href="./index.html" class="logo">
-            <span class="logo-web">Web</span>Studio</a>
+            Web<span class="logo-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
