address+href+focus

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
+            <a class="logo">Web<span href="./index.html" class="logo-studio">Studio</span></a>
             <ul class="menu-nav">
                 <li><a href="" class="link">Studio</a></li>
                 <li><a href="" class="link">Portfolio</a></li>
