--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="./index.html" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="menu-nav">
-                <li><a href="" class="link">Studio</a></li>
+                <li><a href="./index.html" class="link">Studio</a></li>
                 <li><a href="" class="link">Portfolio</a></li>
                 <li><a href="" class="link">Contacts</a></li>
             </ul>
